@@ -441,75 +441,6 @@ nnzSparse <- function(x, cl = class(x), cld = getClassDef(cl))
 }
 
 
-## Number of "structural" non-zeros --- this is  nnzmax() in Matlab
-##        of effectively  non-zero values =      nnz()     "   "
-
-## Our nnzero() is like Matlab's nnz() -- but more sophisticated because of NAs
-## This is now exported!
-nnzero <- function(x, na.counted = NA) {
-    ## na.counted: TRUE: NA's are counted, they are not 0
-    ##		     NA: NA's are not known (0 or not) ==>  result := NA
-    ##		  FALSE: NA's are omitted before counting
-    cl <- class(x)
-    ## speedup:
-    cld <- getClassDef(cl)
-    if(!extends(cld, "Matrix"))
-	sum(nz.NA(x, na.counted))
-    else { ## Matrix
-	d <- x@Dim
-	if(any(d == 0)) return(0L)
-	n <- d[1]
-	iSym <- extends(cld, "symmetricMatrix")
-	if(extends(cld, "pMatrix"))	# is "sparse" too
-	    n
-	else if(extends(cld, "diagonalMatrix"))
-	    sum(nz.NA(diag(x), na.counted))
-	else if(extends(cld, "sparseMatrix")) {
-	    nn <- switch(.sp.class(cl),
-                         "CsparseMatrix" = x@p[d[2]+1L],# == length(x@i) only if not over-alloc.
-                         "TsparseMatrix" = length(x@i),
-                         "RsparseMatrix" = x@p[n+1L])
-	    if(!extends(cld, "nMatrix")) # <==> has 'x' slot : consider NAs in it:
-		nn <- sum(nz.NA(if(nn < length(x@x)) x@x[seq_len(nn)] else x@x,
-				na.counted))
-
-	    if(iSym)
-		nn+nn - sum(nz.NA(diag(x), na.counted))
-	    else if(extends(cld, "triangularMatrix") && x@diag == "U")
-		nn + n else nn
-	}
-	else {
-	    ## dense, not diagonal: Can use 'x' slot;
-	    if(iSym || extends(cld, "triangularMatrix")) {
-		## now !iSym  <==> "triangularMatrix"
-		upper <- (x@uplo == "U")
-		if(length(x@x) < n*n) { ## packed symmetric | triangular
-		    if(iSym) {
-			## indices of *diagonal* entries for packed :
-			iDiag <- cumsum(if(upper) 1:n else c(1L, if(n > 1)n:2))
-			## symmetric packed: count off-diagonals *twice*
-			2L* sum(nz.NA(x@x[-iDiag], na.counted)) +
-			    sum(nz.NA(x@x[ iDiag], na.counted))
-		    }
-		    else ## triangular packed
-			sum(nz.NA(x@x, na.counted))
-		}
-		else {
-		    ## not packed, but may have "arbitrary"
-		    ## entries in the non-relevant upper/lower triangle
-		    s <- sum(nz.NA(x@x[indTri(n, upper=upper)], na.counted))
-		    (if(iSym) 2L * s else s) +
-			(if(!iSym && x@diag == "U")
-			 n else sum(nz.NA(x@x[indDiag(n)], na.counted)))
-		}
-	    }
-	    else { ## dense general <--> .geMatrix
-		sum(nz.NA(x@x, na.counted))
-	    }
-	}
-    }
-}
-
 ## For sparseness handling, return a
 ## 2-column (i,j) matrix of 0-based indices of non-zero entries:
 
