@@ -31,7 +31,7 @@ str( svd(m) )
 str( lapply(eigen(m3), zapsmall))
 
 ### outer()  used to work thanks to  as.array() -- up to R 2.2.1
-##  no longer, because the definition of outer has changed
+##  no longer, because the definition of outer has changed  -- FIXME?
 ##stopifnot(identical(outer(m, m2),
 ##                    outer(as(m,"matrix"), as(m2,"matrix"))),
 ##          identical(outer(m3, m2),
